--- a/Laby2/style.css
+++ b/Laby2/style.css
@@ -1,22 +1,11 @@
-#slider {
-    width: 95%;
-    height: 70%;
-    margin: 100px auto 0 auto;
-    overflow: hidden;
-}
-#slider .slides {
-    display: flex;
-    animation-name: pociag-w-lewo;
-    animation-duration: 4s;
-    animation-delay: 1s;
-    animation-timing-function: ease-in-out;
+*,
+*::after,
+*::before{
+    margin: 0;
+    padding: 0;
+    box-sizing: inherit;
 }
 
-@keyframes pociag-w-lewo {
-    0% {
-        transform: translateX(0);
-    }
-    100% {
-        transform: translateX(-2000px);
-    }
+body{
+    box-sizing: border-box;
 }
