--- a/Laby4/styles.css
+++ b/Laby4/styles.css
@@ -1,25 +1,195 @@
-.container{
-    align-content: center;
-    margin-top: 30px;
-    margin-right: auto;
+/* Import Google Font - Poppins */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+body{
+  background-color: #53919986;
 }
 
-.notes{
-    width: fit-content;
-    height: fit-content;
-    display: flex;
+.note_keeper{
+  margin: 50px;
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(auto-fill, 265px);
 }
-.note{
-    margin-left: 15px;
+
+.note_keeper li{
+  height: inherit;
+  list-style: none;
+  background-color: rgb(45, 129, 160);
+  border-radius: 7px;
+  padding: 15px 20px 20px;
 }
-.notes img{
-    width: 400px;
-    height: 400px;
+
+.add_note, .plus_icon, .bottom_content, .ellipsis_icon .menu li, .content header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-#addNote{
-   display: grid;
-   width: 300px;
-   height: 50px;
-   font-size: 30px;
-   
+
+.add_note .plus_icon{
+  border: 2px dashed #041431;
+  height: 80px;
+  width: 80px;
+  color: #041431;
+  font-size: 40px;
+  border-radius: 50%;
+  justify-content: center;
+}
+.add_note{
+  flex-direction: column;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.add_note p{
+  color: #041431;
+  font-weight: 600;
+  margin-top: 20px;
+}
+
+.note p{
+  font-size: 22px;
+  font-weight: 600;
+}
+
+.note span{
+  display: block;
+  margin-top: 5px;
+  color: #041431;
+  font-size: 15px;
+}
+.note .bottom_content{
+  padding-top: 10px;
+}
+
+.note_keeper .note{
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+.bottom_content span{
+  color: rgb(0, 0, 0);
+  font-size: 14px;
+}
+.bottom_content .ellipsis_icon{
+  color: rgb(0, 0, 0);
+  font-size: 14px;
+  cursor: pointer;
+}
+.ellipsis_icon{
+  position: relative;
+}
+.ellipsis_icon .menu{
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
+  position: absolute;
+  bottom: 0;
+  right: -5px;
+  transform: scale(0);
+  border-radius: 5px;
+  padding: 5px 0;
+  background: rgb(45, 129, 160);
+  transition: transform 0.2s ease;
+  transform-origin: bottom right;
+}
+.ellipsis_icon .menu li{
+  height: 25px;
+  font-size: 16px;
+  border-radius: 0;
+  cursor: pointer;
+  padding: 17px 15px;
+  justify-content: flex-start;
+}
+.ellipsis_icon.show .menu{
+  transform: scale(1);
+}
+
+.menu li:hover{
+  background: rgb(51, 120, 145);;
+}
+.menu li i{
+  padding-right: 9px;
+}
+
+.popup_form{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  background: rgba(0, 0, 0, 0.5);
+}
+.popup_form, .popup_form .popup{
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.25s ease;
+}
+
+.popup_form.show, .popup_form.show .popup{
+  opacity: 1;
+  pointer-events: auto;
+}
+.popup_form.show .popup{
+  transform: translate(-50%, -50%) scale(1);
+}
+.popup_form .popup{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 3;
+  max-width: 400px;
+  width: 100%;
+  justify-content: center;
+  transform: translate(-50%, -50%);
+}
+.popup .content{
+  background: #fff;
+  border-radius: 5px;
+}
+
+.popup .content header{
+  border-bottom: 1px solid #ccc;
+  padding: 15px 25px;
+}
+.content header p{
+  font-weight: 500;
+  font-size: 20px;
+}
+.content header i{
+  cursor: pointer;
+  font-size: 23px;
+}
+.content form{
+  margin: 15px 25px 35px;
+}
+
+.content form :where(input, textarea){
+  width: 100%;
+  height: 50px;
+  border: 1px solid;
+  border-radius: 4px;
+  outline: none;
+  font-size: 17px;
+  padding: 0 15px;
+  resize: none;
+}
+
+.content .row_text{
+  margin-bottom: 15px;
+}
+.content button{
+  margin-bottom: 15px;
+  margin-top: 10px;
+  width: 100%;
+  height: 50px;
+  cursor: pointer;
+}
+.content input{
+  cursor: pointer;
 }
